# messaging_workorder_backend

./: Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml  readme.md
src/: main.rs  setup.rs
src/entities/: environment.rs  environment_channels.rs  environment_configurations.rs  environment_contacts.rs  environment_incident_type.rs  environment_roles.rs  environment_users.rs  environment_workorders.rs  mod.rs  prelude.rs  user.rs
