[package]
name = "messaging_workorder_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12", features = [ "attributes" ] }
sqlx-postgres = "0.8.2"
tokio = { version = "1.42.0", features = ["full"] }
sea-orm = { version = "1.1.3", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
rocket = "0.5.1"
uuid = { version = "1.11.0", features = ["v4"] }
